refactor & doc: User service logic with role based access & documentation