@@ -14,6 +14,9 @@ import com.infotact.warehouse.service.UserService;
 import com.infotact.warehouse.util.EmailUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -21,11 +24,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Implementation of {@link UserService}.
- * Enforces Role-Based Access Control (RBAC) and data isolation between warehouses.
+ * Implementation of {@link UserService} for Identity and Access Management.
+ * <p>
+ * This service manages the staff lifecycle within the boundaries of a specific facility.
+ * It implements strict hierarchical security where <code>ADMIN</code> users hold
+ * promotion/deletion authority, while <code>MANAGER</code> users handle daily status
+ * and profile management.
+ * </p>
  */
 @Slf4j
 @RequiredArgsConstructor
@@ -37,12 +44,11 @@ public class UserServiceImpl implements UserService {
     private final PasswordEncoder passwordEncoder;
     private final EmailUtils emailUtils;
 
-    private static final String ROLE_SUPER_ADMIN = "ROLE_SUPER_ADMIN";
     private static final String ROLE_ADMIN = "ROLE_ADMIN";
     private static final String ROLE_MANAGER = "ROLE_MANAGER";
 
     /**
-     * Internal utility to check the roles of the currently authenticated user.
+     * Internal helper to verify if the requester has specific authority.
      */
     private boolean hasRole(String role) {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
@@ -53,52 +59,56 @@ public class UserServiceImpl implements UserService {
     }
 
     /**
-     * Retrieves the User entity of the person making the request.
+     * Resolves the session holder's profile.
+     * <p><b>Optimization:</b> Cached by username to reduce repeated SecurityContext
+     * lookups during multi-tenant validation.</p>
      */
-    private User getAuthenticatedUser() {
+    @Cacheable(value = "userProfiles", key = "'auth_' + T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
+    public User getAuthenticatedUser() {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         return userRepository.findByEmail(auth.getName())
                 .orElseThrow(() -> new UnauthorizedException("Authenticated user profile not found."));
     }
 
     /**
-     * Logic for Multi-Tenant Isolation.
-     * Ensures that Managers/Admins cannot access or modify users from a different warehouse.
+     * Enforces the 'Silo' boundary.
+     * Ensures the current user and the target user belong to the same facility.
      */
     private void validateWarehouseAccess(User currentUser, User targetUser) {
-        if (hasRole(ROLE_SUPER_ADMIN)) return;
-
         if (currentUser.getWarehouse() == null || targetUser.getWarehouse() == null ||
                 !currentUser.getWarehouse().getId().equals(targetUser.getWarehouse().getId())) {
-            throw new UnauthorizedException("Access Denied: You cannot manage users in other warehouses.");
+            log.error("Multi-tenancy Violation: User {} tried to access ID {}", currentUser.getEmail(), targetUser.getId());
+            throw new UnauthorizedException("Access Denied: You cannot manage users outside your warehouse context.");
         }
     }
 
-    /** {@inheritDoc} */
+    /**
+     * {@inheritDoc}
+     * <p>
+     * <b>Implementation Details:</b>
+     * <ul>
+     * <li>Enforces deterministic password policy: <code>Welcome@ + [Last 4 phone digits]</code>.</li>
+     * <li>Strictly prevents Managers from creating Admin-level accounts.</li>
+     * <li>Triggers an onboarding email containing temporary credentials.</li>
+     * </ul>
+     */
     @Override
     @Transactional
+    @CacheEvict(value = {"userProfiles", "warehouseUsers"}, allEntries = true)
     public String createUser(UserRequest request) {
         User currentUser = getAuthenticatedUser();
         Role targetRole = Role.valueOf(request.getRole().toUpperCase());
 
-        // Hierarchical Security: Admin creation is global (Super Admin only)
-        if (targetRole == Role.ADMIN && !hasRole(ROLE_SUPER_ADMIN)) {
-            throw new UnauthorizedException("Only Super Admins can create Admin accounts.");
+        if (targetRole == Role.ADMIN && !hasRole(ROLE_ADMIN)) {
+            throw new UnauthorizedException("Insufficient Privilege: Only Admins can provision other Admin accounts.");
         }
 
-        // Warehouse Isolation: Prevent cross-warehouse user creation
-        if (!hasRole(ROLE_SUPER_ADMIN)) {
-            if (!currentUser.getWarehouse().getId().equals(request.getWarehouseId())) {
-                throw new UnauthorizedException("You can only create users for your own warehouse.");
-            }
-
-            if (targetRole == Role.EMPLOYEE && !hasRole(ROLE_ADMIN) && !hasRole(ROLE_MANAGER)) {
-                throw new UnauthorizedException("Insufficient permissions to create an employee.");
-            }
+        if (!currentUser.getWarehouse().getId().equals(request.getWarehouseId())) {
+            throw new UnauthorizedException("Multi-tenancy Error: Warehouse assignment mismatch.");
         }
 
         if (userRepository.findByEmail(request.getEmail()).isPresent())
-            throw new AlreadyExistsException("Email already registered.");
+            throw new AlreadyExistsException("A user with this email is already registered.");
 
         Warehouse warehouse = warehouseRepository.findById(request.getWarehouseId())
                 .orElseThrow(() -> new ResourceNotFoundException("Warehouse not found."));
@@ -111,117 +121,102 @@ public class UserServiceImpl implements UserService {
         newUser.setStatus(UserStatus.INACTIVE);
         newUser.setWarehouse(warehouse);
 
-        // Auto-generate password: Welcome@{Last4DigitsOfPhone}
         String phone = request.getContactNumber();
-        String lastFour = phone.length() >= 4 ? phone.substring(phone.length() - 4) : "1234";
-        String tempPassword = "Welcome@" + lastFour;
+        String tempPassword = "Welcome@" + (phone.length() >= 4 ? phone.substring(phone.length() - 4) : "1234");
         newUser.setPassword(passwordEncoder.encode(tempPassword));
 
         userRepository.save(newUser);
-        emailUtils.passwordUpdatedEmail(newUser.getEmail(), "Account Created", tempPassword);
+        emailUtils.passwordUpdatedEmail(newUser.getEmail(), "Account Provisioned", tempPassword);
 
-        return "User created successfully with role " + targetRole + " in warehouse " + warehouse.getName();
+        return "User created successfully with role " + targetRole;
     }
 
-    /** {@inheritDoc} */
+    /**
+     * {@inheritDoc}
+     * <p><b>Filtering:</b> Strictly limited to the authenticated user's warehouse.</p>
+     */
     @Override
     @Transactional(readOnly = true)
+    @PreAuthorize("hasAnyRole('MANAGER', 'ADMIN')")
+    @Cacheable(value = "warehouseUsers", key = "'list_' + T(org.springframework.security.core.context.SecurityContextHolder).getContext().getAuthentication().getName()")
     public List<UserResponse> getAllUser() {
-        if (hasRole(ROLE_SUPER_ADMIN)) {
-            return userRepository.findByRole(Role.ADMIN)
-                    .stream().map(UserResponse::new).collect(Collectors.toList());
-        }
-
         User currentUser = getAuthenticatedUser();
         return userRepository.findAllByWarehouse(currentUser.getWarehouse().getId())
-                .stream().map(UserResponse::new).collect(Collectors.toList());
+                .stream().map(UserResponse::new).toList();
     }
 
-    /** {@inheritDoc} */
+    /**
+     * {@inheritDoc}
+     * <p><b>RBAC Logic:</b> Profile metadata updates are permitted for Managers,
+     * but Role modifications (Promotions) are strictly reserved for Admins.</p>
+     */
     @Override
     @Transactional
+    @CacheEvict(value = {"userProfiles", "warehouseUsers"}, allEntries = true)
     public String updateUserDetails(String id, UserUpdate request) {
         User currentUser = getAuthenticatedUser();
         User targetUser = userRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found."));
 
-        if (targetUser.getRole() == Role.ADMIN && !hasRole(ROLE_SUPER_ADMIN)) {
-            throw new UnauthorizedException("Only Super Admins can modify Admin accounts.");
-        }
-
         validateWarehouseAccess(currentUser, targetUser);
 
         if (request.getName() != null) targetUser.setName(request.getName());
+        if (request.getEmail() != null) targetUser.setEmail(request.getEmail());
+        if (request.getContactNumber() != null) targetUser.setContactNumber(request.getContactNumber());
 
-        // Role Promotion Constraints
         if (request.getRole() != null) {
-            Role newRole = Role.valueOf(request.getRole().toUpperCase());
-
-            if (hasRole(ROLE_ADMIN)) {
-                if (newRole == Role.ADMIN || newRole == Role.SUPER_ADMIN) {
-                    throw new UnauthorizedException("Admins cannot promote users to Admin roles.");
-                }
-                targetUser.setRole(newRole);
-            } else if (hasRole(ROLE_SUPER_ADMIN)) {
-                targetUser.setRole(newRole);
-            } else {
-                throw new UnauthorizedException("Managers cannot change user roles.");
+            if (!hasRole(ROLE_ADMIN)) {
+                log.warn("Unauthorized Role Update: Manager {} attempted to promote {}", currentUser.getEmail(), targetUser.getEmail());
+                throw new UnauthorizedException("Access Denied: Role modifications require Admin clearance.");
             }
+            targetUser.setRole(Role.valueOf(request.getRole().toUpperCase()));
         }
 
         userRepository.save(targetUser);
-        return "User updated successfully.";
+        return "User profile updated successfully.";
     }
 
-    /** {@inheritDoc} */
+    /**
+     * {@inheritDoc}
+     * <p><b>Soft-Delete:</b> Sets status to <code>DELETED</code> to maintain
+     * referential integrity for historical order logs.</p>
+     */
     @Override
     @Transactional
+    @CacheEvict(value = {"userProfiles", "warehouseUsers"}, allEntries = true)
     public void deleteUser(String id) {
-        User targetUser = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found."));
+        if (!hasRole(ROLE_ADMIN)) throw new UnauthorizedException("Only Admins can deactivate user accounts.");
 
-        if (targetUser.getRole() == Role.ADMIN && !hasRole(ROLE_SUPER_ADMIN)) {
-            throw new UnauthorizedException("Only Super Admins can delete Admin accounts.");
-        }
-
-        if (!hasRole(ROLE_ADMIN) && !hasRole(ROLE_SUPER_ADMIN)) {
-            throw new UnauthorizedException("Only Admins can delete users.");
-        }
-
+        User targetUser = userRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("User not found."));
         User currentUser = getAuthenticatedUser();
-        validateWarehouseAccess(currentUser, targetUser);
 
+        validateWarehouseAccess(currentUser, targetUser);
         targetUser.setStatus(UserStatus.DELETED);
         userRepository.save(targetUser);
     }
 
     /** {@inheritDoc} */
     @Override
-    @Transactional
-    public void updateStatus(String userId, UserStatus status) {
+    @Transactional(readOnly = true)
+    @Cacheable(value = "userProfiles", key = "#id")
+    public UserResponse getUserById(String id) {
         User currentUser = getAuthenticatedUser();
-        User targetUser = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
-
+        User targetUser = userRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("User not found."));
         validateWarehouseAccess(currentUser, targetUser);
-
-        if (!hasRole(ROLE_ADMIN) && !hasRole(ROLE_MANAGER) && !hasRole(ROLE_SUPER_ADMIN)) {
-            throw new UnauthorizedException("Access denied.");
-        }
-
-        targetUser.setStatus(status);
-        userRepository.save(targetUser);
+        return new UserResponse(targetUser);
     }
 
     /** {@inheritDoc} */
     @Override
-    @Transactional(readOnly = true)
-    public UserResponse getUserById(String id) {
+    @Transactional
+    @CacheEvict(value = {"userProfiles", "warehouseUsers"}, allEntries = true)
+    @PreAuthorize("hasAnyRole('MANAGER', 'ADMIN')")
+    public void updateStatus(String userId, UserStatus status) {
         User currentUser = getAuthenticatedUser();
-        User targetUser = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found."));
+        User targetUser = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User not found"));
         validateWarehouseAccess(currentUser, targetUser);
-        return new UserResponse(targetUser);
+        targetUser.setStatus(status);
+        userRepository.save(targetUser);
     }
 
     /** {@inheritDoc} */
@@ -230,15 +225,16 @@ public class UserServiceImpl implements UserService {
     public List<UserResponse> getAllActiveUsers() {
         User currentUser = getAuthenticatedUser();
         return userRepository.findActiveByWarehouse(currentUser.getWarehouse().getId())
-                .stream().map(UserResponse::new).collect(Collectors.toList());
+                .stream().map(UserResponse::new).toList();
     }
 
     /** {@inheritDoc} */
     @Override
     @Transactional(readOnly = true)
+    @PreAuthorize("hasAnyRole('MANAGER', 'ADMIN')")
     public List<UserResponse> getUsersByRole(Role role) {
         User currentUser = getAuthenticatedUser();
         return userRepository.findByWarehouseAndRole(currentUser.getWarehouse().getId(), role)
-                .stream().map(UserResponse::new).collect(Collectors.toList());
+                .stream().map(UserResponse::new).toList();
     }
 }
